<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
<package format="3">
  <name>husky_commander</name>
  <version>1.0.0</version>
  <description>Husky Commander to launch commands by outside app</description>
  <maintainer email="cassionst@gmail.com">Cassio Nicoletti</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
